force-app/src/objects/c2g__ArchiveSetQuery__c.object
<CustomObject>
    <fields>
        <fullName>c2g__ArchiveSet__c</fullName>
        <label>Archive Set</label>
        <referenceTo>c2g__ArchiveSet__c</referenceTo>
        <relationshipLabel>Archive Set Queries</relationshipLabel>
        <relationshipName>ArchiveSetQueries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__RecordCount__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Archive Set Query</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASQRY-{00000000}</displayFormat>
        <label>Archive Set Query Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Set Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>